Corrección de bugs y code smells.